2008-07-08 [colin]	2.0.0cvs1

	* libical/libical/icalparser.c
		Lines can be folded with tabs in addition
		to spaces (RFC 2445, 4.1 Content Lines)

2008-06-27 [paul]	2.0.0

	version 2.0.0 released

2008-06-27 [paul]	1.102.0cvs8

	* po/es.po
	* po/fi.po
		updated by Ricardo Mones and Flammie Pirinen

2008-05-16 [paul]	1.102.0cvs7

	* src/vcal_folder.c
		fix a compiler warning

2008-05-13 [colin]	1.102.0cvs6

	* src/vcal_folder.c
		Fix lack of scanning if it hasn't been done
		when requesting one feed item

2008-05-07 [colin]	1.102.0cvs5

	* src/vcal_meeting_gtk.c
		Separate Maemo and generic UMPC code

2008-04-29 [colin]	1.102.0cvs4

	* src/vcal_folder.c
	* src/vcalendar.c
		Fix crash on cancel

2008-04-21 [colin]	1.102.0cvs3

	* src/vcal_folder.c
		Fix default view on new folders

2008-04-20 [colin]	1.102.0cvs2

	* src/day-view.c
	* src/month-view.c
	* src/vcal_interface.h
	* src/vcal_manager.c
	* src/vcalendar.c
	* src/vcalendar.h
		Stop depending on folder->inbox in vcalendar.c
		Generalise a bit

2008-04-18 [colin]	1.102.0cvs1

	* src/vcal_folder.c
		Use claws_unlink instead of g_unlink

2008-04-18 [paul]	1.102.0

	1.102.0 released

	* po/fi.po
	* po/it.po
	* pt_BR.po
		updated by Flammie Pirinen, Andrea Spadaccini and
		Frederico Goncalves Guimaraes

2008-04-18 [colin]	1.101.0cvs28

	* src/vcal_folder.c
		Fix miscommit

2008-04-18 [colin]	1.101.0cvs27

	* po/fr.po
		Update translation
	* src/vcal_folder.c
		Fix translation-related problems

2008-04-08 [colin]	1.101.0cvs26

	* src/vcal_folder.c
		Fix integer overflow in Curl response code
	* src/vcal_manager.c
		Fix case-sensitive search of answers

2008-03-28 [colin]	1.101.0cvs25

	* src/vcal_folder.c
	* src/vcalendar.c
		Fix crash on unparseable text/calendar parts.

2008-03-28 [colin]	1.101.0cvs24

	* src/vcal_folder.c
	* src/vcal_interface.h
	* src/vcalendar.h
		Better fix (let the caller update the GUI
		only once at the end of the adds/updates/deletions)

2008-03-28 [colin]	1.101.0cvs23
